--- a/packages/theme-compatibility/src/twentytwentytwo/editor.scss
+++ b/packages/theme-compatibility/src/twentytwentytwo/editor.scss
@@ -4,6 +4,10 @@
 	color: var(--wp--preset--color--foreground);
 	font-size: var(--wp--preset--font-size--medium);
 	line-height: var(--wp--custom--typography--line-height--normal);
+
+	.is-root-container .wp-block[data-align="full"] {
+		--wp--custom--spacing--outer: calc(-1 * var(--cs--style--block-gap));
+	}
 }
 
 // This is necessary to fix block alignment on previews
